--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </ul>
             </div>
             <div class="benefit">
-                <p>BENEFIT</p>
+                <p>BENEFITS</p>
                 <ul>
                     <li>Apples are nutricious</li>
                     <li>Apples may be good for weight loss</li>
